[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
description = "A high-level wrapper around the Duktape Javascript/ECMAScript interpreter"
documentation = "https://dflemstr.github.io/duk/duk"
homepage = "https://dflemstr.github.io/duk/duk"
keywords = ["javascript", "js", "ecmascript", "duktape"]
license = "MIT"
name = "duk"
readme = "README.md"
repository = "https://github.com/dflemstr/duk"
version = "0.1.0"

[dependencies]
error-chain = "0.12.1"

[dependencies.duktape-sys]
path = "duktape-sys"
version = "*"

[dependencies.log]
optional = true
version = "0.4.10"

[dev-dependencies]
env_logger = "0.7.1"

[features]
debug = ["duktape-sys/debug"]
default = ["debug", "logging"]
logging = ["log"]
spam = ["duktape-sys/spam"]
trace = ["duktape-sys/trace"]

[workspace]
members = ["duktape-sys"]
