[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
description = "A high-level wrapper around the Duktape Javascript/ECMAScript interpreter"
documentation = "https://dflemstr.github.io/duk/duk"
homepage = "https://dflemstr.github.io/duk/duk"
keywords = ["javascript", "js", "ecmascript", "duktape"]
license = "MIT"
name = "duk"
readme = "README.md"
repository = "https://github.com/dflemstr/duk"
version = "0.3.1-alpha.0"
edition = "2018"

[dependencies]
failure = "0.1.6"

[dependencies.duk-sys]
version = "^0.3.0"

[dependencies.log]
optional = true
version = "0.4.10"

[dev-dependencies]
env_logger = "0.7.1"

[features]
debug = ["duk-sys/debug"]
default = ["debug", "logging"]
logging = ["log"]
spam = ["duk-sys/spam"]
trace = ["duk-sys/trace"]
